feat: update all icons to use custom logo\n\n- Replaced card game themed icons with user's custom logo\n- Generated all required icon sizes from new_logo.jpg:\n  - icon.png (1024x1024) - Main app icon\n  - adaptive-icon.png (1024x1024) - Android adaptive icon\n  - splash-icon.png (1024x1024) - Splash screen icon\n  - favicon.png (256x256) - Web favicon\n- Updated icon preview HTML to reflect new logo design\n- Maintained all existing icon configurations in app.json\n\nThe new logo provides a more personalized and professional appearance for the 2468 Counter app across all platforms.

--- a/icon-preview.html
+++ b/icon-preview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2468 Counter - New Icons Preview</title>
+    <title>2468 Counter - Updated Logo Icons Preview</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,140 +27,91 @@
         }
         .icon-card h3 {
             color: #007AFF;
-            margin-top: 0;
+            margin-bottom: 15px;
         }
         .icon-card img {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            margin-bottom: 10px;
         }
-        .icon-sizes {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin: 20px 0;
+        .icon-info {
+            font-size: 14px;
+            color: #666;
+            margin-top: 10px;
         }
-        .icon-size {
+        .header {
             text-align: center;
+            margin-bottom: 30px;
         }
-        .icon-size img {
-            display: block;
-            margin: 0 auto 10px;
+        .header h1 {
+            color: #007AFF;
+            margin-bottom: 10px;
         }
-        .description {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            margin: 20px 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-            margin: 20px 0;
-        }
-        .feature {
-            background: #007AFF;
-            color: white;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
+        .header p {
+            color: #666;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
-    <h1>🎴 2468 Counter - New Custom Icons</h1>
-    
-    <div class="description">
-        <h2>Design Overview</h2>
-        <p>These custom icons were designed specifically for your 2468 card game scorekeeper app. The design features:</p>
-        <div class="features">
-            <div class="feature">🎯 Card Game Theme</div>
-            <div class="feature">🔢 Numbers 2, 4, 6, 8</div>
-            <div class="feature">♠♥♦♣ Card Suits</div>
-            <div class="feature">🎨 App Brand Colors</div>
-            <div class="feature">📱 Modern Design</div>
-            <div class="feature">🌟 Professional Look</div>
-        </div>
+    <div class="header">
+        <h1>🎯 2468 Counter - Updated Logo Icons</h1>
+        <p>Preview of all app icons generated from your custom logo</p>
     </div>
 
     <div class="icon-grid">
         <div class="icon-card">
-            <h3>Main App Icon (1024x1024)</h3>
-            <img src="assets/icon.png" alt="Main App Icon" style="width: 200px; height: 200px;">
-            <p>Used for: iOS/Android app icon, app stores</p>
+            <h3>📱 Main App Icon</h3>
+            <img src="assets/icon.png" alt="Main App Icon" style="max-width: 200px;">
+            <div class="icon-info">
+                <strong>File:</strong> icon.png<br>
+                <strong>Size:</strong> 1024x1024px<br>
+                <strong>Usage:</strong> iOS/Android app icon
+            </div>
         </div>
 
         <div class="icon-card">
-            <h3>Adaptive Icon (1024x1024)</h3>
-            <img src="assets/adaptive-icon.png" alt="Adaptive Icon" style="width: 200px; height: 200px;">
-            <p>Used for: Android adaptive icon system</p>
+            <h3>🤖 Adaptive Icon</h3>
+            <img src="assets/adaptive-icon.png" alt="Adaptive Icon" style="max-width: 200px;">
+            <div class="icon-info">
+                <strong>File:</strong> adaptive-icon.png<br>
+                <strong>Size:</strong> 1024x1024px<br>
+                <strong>Usage:</strong> Android adaptive icon
+            </div>
         </div>
 
         <div class="icon-card">
-            <h3>Splash Icon (1024x1024)</h3>
-            <img src="assets/splash-icon.png" alt="Splash Icon" style="width: 200px; height: 200px;">
-            <p>Used for: App loading/splash screen</p>
+            <h3>🚀 Splash Icon</h3>
+            <img src="assets/splash-icon.png" alt="Splash Icon" style="max-width: 200px;">
+            <div class="icon-info">
+                <strong>File:</strong> splash-icon.png<br>
+                <strong>Size:</strong> 1024x1024px<br>
+                <strong>Usage:</strong> App splash screen
+            </div>
         </div>
 
         <div class="icon-card">
-            <h3>Favicon (256x256)</h3>
-            <img src="assets/favicon.png" alt="Favicon" style="width: 128px; height: 128px;">
-            <p>Used for: Web browser tab icon</p>
-        </div>
-    </div>
-
-    <div class="description">
-        <h2>Icon Size Demonstration</h2>
-        <p>Here's how the icon looks at different sizes:</p>
-        <div class="icon-sizes">
-            <div class="icon-size">
-                <img src="assets/icon.png" alt="512px" style="width: 512px; height: 512px;">
-                <strong>512px</strong>
-            </div>
-            <div class="icon-size">
-                <img src="assets/icon.png" alt="256px" style="width: 256px; height: 256px;">
-                <strong>256px</strong>
-            </div>
-            <div class="icon-size">
-                <img src="assets/icon.png" alt="128px" style="width: 128px; height: 128px;">
-                <strong>128px</strong>
-            </div>
-            <div class="icon-size">
-                <img src="assets/icon.png" alt="64px" style="width: 64px; height: 64px;">
-                <strong>64px</strong>
-            </div>
-            <div class="icon-size">
-                <img src="assets/icon.png" alt="32px" style="width: 32px; height: 32px;">
-                <strong>32px</strong>
+            <h3>🌐 Web Favicon</h3>
+            <img src="assets/favicon.png" alt="Favicon" style="max-width: 128px;">
+            <div class="icon-info">
+                <strong>File:</strong> favicon.png<br>
+                <strong>Size:</strong> 256x256px<br>
+                <strong>Usage:</strong> Web browser favicon
             </div>
         </div>
     </div>
 
-    <div class="description">
-        <h2>Design Elements</h2>
+    <div style="margin-top: 40px; padding: 20px; background: white; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <h3 style="color: #007AFF; margin-bottom: 15px;">✅ Icon Generation Complete</h3>
+        <p>All icons have been successfully generated from your custom logo:</p>
         <ul>
-            <li><strong>Background:</strong> Blue circle (#007AFF) matching your app's primary color</li>
-            <li><strong>Cards:</strong> Four white playing cards with rounded corners</li>
-            <li><strong>Numbers:</strong> Bold "2", "4", "6", "8" in each card</li>
-            <li><strong>Suits:</strong> Spade (♠), Heart (♥), Diamond (♦), Club (♣)</li>
-            <li><strong>Center:</strong> Subtle highlight with "2468" text</li>
-            <li><strong>Style:</strong> Modern, clean, and professional</li>
+            <li>✅ <strong>icon.png</strong> - Main app icon (1024x1024)</li>
+            <li>✅ <strong>adaptive-icon.png</strong> - Android adaptive icon (1024x1024)</li>
+            <li>✅ <strong>splash-icon.png</strong> - Splash screen icon (1024x1024)</li>
+            <li>✅ <strong>favicon.png</strong> - Web favicon (256x256)</li>
         </ul>
-    </div>
-
-    <div class="description">
-        <h2>Next Steps</h2>
-        <p>Your new icons are ready! They've been generated in all the required sizes for your Expo app:</p>
-        <ul>
-            <li>✅ <code>icon.png</code> - Main app icon (1024x1024)</li>
-            <li>✅ <code>adaptive-icon.png</code> - Android adaptive icon (1024x1024)</li>
-            <li>✅ <code>splash-icon.png</code> - Splash screen icon (1024x1024)</li>
-            <li>✅ <code>favicon.png</code> - Web favicon (256x256)</li>
-        </ul>
-        <p>The icons are already configured in your <code>app.json</code> file and ready to use!</p>
+        <p><strong>Next Steps:</strong> Commit these changes and create a new build to see your logo in action!</p>
     </div>
 </body>
 </html> 
